--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 # VS Code配置
 .vscode/
 
-# Latex构建中生成的文件
-*.aux
-*.log
-*.synctex.gz
-
-# minted生成的文件夹
-_minted-example/
+# 编译生成的文件和minted缓存已经全部移入build文件夹中
+build/
